test/typeerrors/Examples/ExprLambdaVarBind.hs
module ExprLambdaVarBind where

f = \x -> if x then 1 else x
